--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-  * { font-family: sans-serif; }
+  * { font-family: sans-serif; padding: 3em; }
   </style>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>incomple.to</title>
