--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-  * { font-family: sans-serif; padding: 3em; }
+  * { font-family: sans-serif; padding: 3em; color: #111; }
   </style>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>incomple.to</title>
 </head>
 <body>
   <p>This is not a website.</p>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <br>
   <br>
   <p>Yet.</p>
