--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-  * { font-family: sans-serif; padding: 1em; color: #111; }
+  * { font-family: serif; padding: 1em; color: #111; }
   </style>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>incomple.to</title>
 </head>
 <body>
-  <p>This is not a website.</p>
+  <p>This</p>
   <br>
+  <p>is</p>
   <br>
+  <p>not</p>
   <br>
+  <p>a</p>
   <br>
+  <p>web</p>
   <br>
-  <br>
+  <p>site.</p>
   <br>
   <br>
   <br>
