--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-  * { font-family: serif; padding: 1em; color: #111; }
+  * { font-family: serif; padding: 1em; color: #111; font-size: 1.4em; }
   </style>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>incomple.to</title>
@@ -21,6 +21,9 @@
   <p>web</p>
   <br>
   <p>site.</p>
+  <br>
+  <br>
+  <br>
   <br>
   <br>
   <br>
