--- a/initiation-info.html
+++ b/initiation-info.html
@@ -9,13 +9,13 @@
   <title>Join Incompleto</title>
 </head>
   <body>
-    <div class="info center">
-      <div class="right">
+    <div class="info">
+      <div class="">
         <h1>Holi, human</h1>
-        <p3>The other humans behind Incompleto need this information to initiate you. Like in life, there’s always another option, so feel free to ignore as many boxes as you’d like. You will be ignored in the same degree.</p3>
+        <p class="p3">The other humans behind Incompleto need this information to initiate you. Like in life, there’s always another option, so feel free to ignore as many boxes as you’d like. You will be ignored in the same degree.</p>
       </div>
       <div>
-        <form action="/action_page.php" align="right" class="">
+        <form action="/action_page.php" align="right">
           <p2>Preferred name </p2><input type="text" name="Name" value="" autofocus><br>
           <p2>Google email </p2><input type="text" name="Email" value=""><br>
           <p2>Telegram </p2><input type="text" name="Telegram" value="" autofocus><br>
