--- a/initiation-no.html
+++ b/initiation-no.html
@@ -10,11 +10,7 @@
 </head>
   <body>
     <div class="center">
-      <h1>Do you want to join Incompleto?</h1>
-      <div>
-        <button class="hvr-wobble-vertical"><a href="initiation-code.html"><p>Yes</p></a></button>
-        <button class="hvr-wobble-horizontal"><a href="initiation-no.html"><p>No</p></a></button>
-      </div>
+      <h1>K, bye!</h1>
   </div>
   </body>
 </html>
