--- a/initiation-code.html
+++ b/initiation-code.html
@@ -9,7 +9,7 @@
   <title>Join Incompleto</title>
 </head>
   <body>
-    <div class="textbox center">
+    <div class="textbox">
       <div class="textbox-header">
         <svg>
           <defs>
