--- a/initiation-01.html
+++ b/initiation-01.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="initiation.css">
-  <link href="https://fonts.googleapis.com/css?family=Saira:500,700" rel="stylesheet">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Join Incompleto</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="initiation.css">
+    <link href="https://fonts.googleapis.com/css?family=Saira:500,700" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Join Incompleto</title>
+  </head>
   <body>
     <div class="textbox">
       <div class="textbox-header">
         <svg>
           <defs>
             <pattern
-                id="horzLines"
-                  width="4"
-                  height="4"
-                patternUnits="userSpaceOnUse">
-                   <line
-                      x1="0"
-                      y1="0"
-                      x2="4"
-                      y2="0"
-                      stroke="black"
-                      stroke-width="4"
-                   />
+              id="horzLines"
+              width="4"
+              height="4"
+              patternUnits="userSpaceOnUse">
+              <line
+                x1="0"
+                y1="0"
+                x2="4"
+                y2="0"
+                stroke="black"
+                stroke-width="4"
+              />
             </pattern>
           </defs>
           <rect x="0" y="0" width="100%" height="26" fill="url(#horzLines)"></rect>
         </svg>
-        <div class="title"><p2>Incompleto | Code of Conduct</p2></div>
+        <div class="textbox-title"><p class="p2">Incompleto | Code of Conduct</p></div>
         <svg>
           <defs>
             <pattern
@@ -78,14 +78,13 @@
           <h1>Scope</h1>
           <p>This Code of Conduct applies both within project spaces and in public spaces when an individual is representing the project or its community. Examples of representing the project or community include using an official e-mail address, posting via an official social media account, or acting as an appointed representative at an online or offline event. Representation of the project may be further defined and clarified by members.</p>
           <h1>Enforcement</h1>
-          <p>Instances of abusive, harassing, or otherwise unacceptable behavior may be reported by contacting the team at notcool@incomple.to. All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate to the circumstances. The team is obligated to maintain confidentiality with regard to the reporter of an incident. Further details of specific enforcement policies may be posted separately.</p>
+          <p>Instances of abusive, harassing, or otherwise unacceptable behavior may be reported by contacting the team at <strong>notcool@incomple.to</strong>. All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate to the circumstances. The team is obligated to maintain confidentiality with regard to the reporter of an incident. Further details of specific enforcement policies may be posted separately.</p>
           <p>Members or attendees who do not follow or enforce the Code of Conduct in good faith may face temporary or permanent repercussions as determined by other members of the leadership.</p>
           <h1>Attribution</h1>
-          <p>This Code of Conduct is adapted from the Contributor Covenant v1.4. For any questions about this code of conduct send us an email.</p>
+          <p>This Code of Conduct is adapted from the <a href="https://www.contributor-covenant.org/version/1/4/code-of-conduct.html" class="rotate">Contributor Covenant v1.4</a>. For any questions about this code of conduct <a href="mailto:holi@incomple.to" class="rotate">send us an email</a>.</p>
         </div>
-        <button><a href="initiation-info.html"><p>Ok, I agree</p></a></button>
+        <button><a href="initiation-02.html"><p>Ok, I agree</p></a></button>
       </div>
     </div>
-  </div>
   </body>
 </html>
