--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Sunday Branch</h1>
         <p>
           02/06/19 11:00–14:00<br />
-          La nave nodriza <br />
+          La Nave Nodriza <br />
           Doctor Fourquet 27 <br />
           Madrid
         </p>
