--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <div>
         <h1>Sunday Branch</h1>
         <p>
-          02/06/19 11:00–14:00<br />
-          La Nave Nodriza <br />
-          Doctor Fourquet 27 <br />
-          Madrid
+          09/06/19 11:00–14:00<br />
+          La Nave Nodriza<br />
+          Doctor Fourquet 27<br />
+          (Madrid)
         </p>
       </div>
     </section>
