--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
     <section>
       <canvas class="zdog-canvas" width="400" height="400"></canvas>
       <div>
-        <h1>Sunday Branch</h1>
+        <h1><a href="https://surfclub.incomple.to">Surf Club</a></h1>
         <p>
-          16/06/19 11:00–14:00<br />
+          20/06/19 &nbsp; 19:00<br />
           La Nave Nodriza<br />
           Doctor Fourquet 27<br />
           (Madrid)
