--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>incomple.to – Sunday Branch</title>
+    <title>Incompleto</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
