--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,10 @@
     <section>
       <canvas class="zdog-canvas" width="400" height="400"></canvas>
       <div>
-        <h1><a href="https://surfclub.incomple.to">Surf Club</a></h1>
+        <h1><a href="https://surfclub.incomple.to">Sunday Branch</a></h1>
         <p>
-          20/06/19 &nbsp; 19:00<br />
+          Season finale!<br />
+          23/06/19 &nbsp; 19:00<br />
           La Nave Nodriza<br />
           Doctor Fourquet 27<br />
           (Madrid)
