Removes the link

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <section>
       <canvas class="zdog-canvas" width="400" height="400"></canvas>
       <div>
-        <h1><a href="https://surfclub.incomple.to">Sunday Branch</a></h1>
+        <h1>Sunday Branch</h1>
         <p>
           Season finale!<br />
           23/06/19 &nbsp; 19:00<br />
