--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <h1>Sunday Branch</h1>
         <p>
           Season finale!<br />
-          23/06/19 &nbsp; 19:00<br />
+          23/06/19 &nbsp; 11:00–14:00<br />
           La Nave Nodriza<br />
           Doctor Fourquet 27<br />
           (Madrid)
